add user ID thru JWT

--- a/backend/backend.secrets.env.template
+++ b/backend/backend.secrets.env.template
@@ -34,3 +34,5 @@ BACKEND_MINIO_USER_PASSWORD=${BACKEND_MINIO_USER_PASSWORD}
 # account's password.
 #
 BACKEND_POSTGRES_USER_PASSWORD=${BACKEND_POSTGRES_USER_PASSWORD}
+
+APPLICATION_JWT_SECRET=${APPLICATION_JWT_SECRET}
