--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,23 +9,24 @@ dependencies = [
   "icecream",
   "fastapi[standard]",
   "langchain",
+  "langchain-anthropic>=0.3.1",
   "langchain-community",
+  "langchain-google-genai>=2.0.8",
   "langchain-huggingface",
+  "langchain-ollama>=0.2.2",
   "langchain-openai",
   "langchain-postgres",
   "langchain-unstructured",
   "langgraph",
+  "langgraph-checkpoint-postgres>=2.0.9",
   "onnx",
   "psycopg[binary,pool]",
+  "pdfplumber>=0.11.4",
+  "pydantic-settings>=2.7.0",
+  "pyjwt",
   "python-dotenv",
   "redis",
   "unstructured[pdf]",
-  "pdfplumber>=0.11.4",
-  "pydantic-settings>=2.7.0",
-  "langgraph-checkpoint-postgres>=2.0.9",
-  "langchain-google-genai>=2.0.8",
-  "langchain-ollama>=0.2.2",
-  "langchain-anthropic>=0.3.1",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
