--- a/compose.yml
+++ b/compose.yml
@@ -1,5 +1,19 @@
 name: agent
 
 include:
+  - frontend/compose.yml
   - backend/compose.yml
-  - common.compose.yml
+  - minio/compose.yml
+  - postgres/compose.yml
+  - redis/compose.yml
+
+networks:
+  agent-poc:
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.enable_ip_masquerade: "true"
+      com.docker.network.driver.mtu: 1500
+    ipam:
+      config:
+        - subnet: 172.31.1.0/28
+          gateway: 172.31.1.1
