--- a/frontend/compose.yml
+++ b/frontend/compose.yml
@@ -2,7 +2,7 @@
 services:
   init-frontend-volumes:
     image: 'debian:12.8-slim'
-    profiles: [ frontend, all ]
+    profiles: [ frontend, all, all-cpu ]
     # No network is needed to initialize named volumes
     network_mode: none
     user: '0:0' 
@@ -14,7 +14,7 @@ services:
 
   vite-dev-server:
     image: 'localdomain-frontend:node-22-bookworm'
-    profiles: [ frontend, all ]
+    profiles: [ frontend, all, all-cpu ]
     environment:
       # Only environment variables that are important to the Docker environment
       # will be configured here. All other environment variables are extracted
@@ -41,7 +41,7 @@ services:
 
   proxy:
     image: 'nginx:1.27.3-bookworm'
-    profiles: [ frontend, all ]
+    profiles: [ frontend, all, all-cpu ]
     volumes:
       # Mount the Nginx configuration file.
       - ./nginx_default.conf:/etc/nginx/conf.d/default.conf
@@ -50,8 +50,6 @@ services:
       - '15173:15173'
     networks:
       - agent-poc
-    depends_on:
-      - vite-dev-server
 
 volumes:
   node_modules:
