--- a/frontend/nginx_default.conf
+++ b/frontend/nginx_default.conf
@@ -13,7 +13,7 @@ server {
 
     location /api/ {
         rewrite /api/(.*) /$1  break;
-        proxy_pass http://agent-fastapi-dev-server-1:8100;
+        proxy_pass http://fastapi-dev-server:8100;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
