--- a/postgres/compose.yml
+++ b/postgres/compose.yml
@@ -3,7 +3,7 @@ name: pgvector
 services:
   pgvector:
     image: localdomain-postgres:17.2-pgvector
-    profiles: [ postgres, infrastructure, all ]
+    profiles: [ postgres, infrastructure, all, all-cpu ]
     entrypoint: [ 'docker-entrypoint.sh' ]
     command: [ postgres ]
     ports:
@@ -26,7 +26,7 @@ services:
 
   pgvector-init:
     image: localdomain-postgres:17.2-pgvector
-    profiles: [ postgres, infrastructure, all ]
+    profiles: [ postgres, infrastructure, all, all-cpu ]
     entrypoint: [ '/bin/sh' ]
     command: [ /init-postgres.sh ]
     # Attach postgres-init directly to main container's network stack
