--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^11.2.0",
     "marked": "^15.0.4",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
     "vuetify": "^3.7.6"
