--- a/backend/requirements-cuda12.compiled.txt
+++ b/backend/requirements-cuda12.compiled.txt
@@ -37,6 +37,8 @@ beautifulsoup4==4.12.3
     # via unstructured
 billiard==4.2.1
     # via celery
+blinker==1.9.0
+    # via app (pyproject.toml)
 boto3==1.36.2
     # via cloudpathlib
 botocore==1.36.2
